--- a/platziverse-db/package.json
+++ b/platziverse-db/package.json
@@ -1,10 +1,10 @@
 {
     "name": "platziverse-db",
     "version": "1.0.0",
-    "description": "A simple IoT platform - DB module",
+    "description": "A simple IoT platform - DB",
     "main": "index.js",
     "scripts": {
-        "setup": "@powershell $env:DEBUG='platziverse:*';node setup.js",
+        "setup": "@powershell $env:DEBUG='iot:*';node setup.js",
         "lint": "standard",
         "lint-fix": "standard --fix"
     },
@@ -29,4 +29,5 @@
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.21.4"
     }
+
 }
