--- a/platziverse-db/package.json
+++ b/platziverse-db/package.json
@@ -4,6 +4,7 @@
     "description": "A simple IoT platform - DB",
     "main": "index.js",
     "scripts": {
+        "test": "SET DEBUG=iot:* && nyc ava tests/agent-tests.js --verbose",
         "setup": "@powershell $env:DEBUG='iot:*';node setup.js",
         "lint": "standard",
         "lint-fix": "standard --fix"
@@ -19,15 +20,18 @@
     },
     "homepage": "https://github.com/PabloTP2122/IoTGreen#readme",
     "devDependencies": {
+        "ava": "^4.3.3",
+        "nyc": "^15.1.0",
+        "sqlite3": "^5.1.1",
         "standard": "^17.0.0"
     },
     "dependencies": {
-        "chalk": "^5.0.1",
+        "chalk": "^4.0.0",
         "debug": "^4.3.4",
-        "inquirer": "^9.1.0",
+        "defaults": "^1.0.3",
+        "inquirer": "^8.0.0",
         "pg": "^8.8.0",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.21.4"
     }
-
 }
